# husky_footplcmt_ws

./: .gitignore
src/husky_footplcmt/: CMakeLists.txt  package.xml
src/husky_footplcmt/config/: camera_joint_controllers.yaml  pole_camera_controllers.yaml  pole_camera_test.yaml
src/husky_footplcmt/gazebo_worlds/: balance_world.world  block_pipe.world  block_pipe_camera.world
src/husky_footplcmt/gazebo_worlds/models/block/: model.config  model.sdf
src/husky_footplcmt/gazebo_worlds/models/block_with_camera/: model.config  model.sdf  model_backup
src/husky_footplcmt/gazebo_worlds/models/pipe/: model.config  model.sdf
src/husky_footplcmt/launch/: block_pipe_camera.launch.py  champ_custom_world.launch.py  gazebo.launch.py  pole_camera.launch.py  pole_camera_gpt.launch.py  pole_camera_test.launch.py  spawn_robot.launch.py
src/husky_footplcmt/maps/: saved_elevation_map.yaml
src/husky_footplcmt/rviz2/: camera_view.rviz
src/husky_footplcmt/scripts/: contoller_bridge.py  elevation_map_accumulator.py  joint_controller.py
src/husky_footplcmt/urdf/: block_pipe_camera.urdf  block_pipe_camera_back.xml  pole_camera.urdf  pole_camera_backup.xml  pole_camera_test.urdf
